--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-# Keep these:
-!treegen_gui.py
-!treegen_gui.exe
-
-# Python bytecode and caches
+# Ignore Python build artifacts
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
 
-# Virtual environments
+# Ignore virtual environments
 .env/
 .venv/
 env/
 venv/
 
-# PyInstaller build artifacts
+# Ignore PyInstaller output folders (just in case)
 build/
 dist/
 *.spec
@@ -24,14 +20,12 @@ dist/
 *.tmp
 *.bak
 
-# OS-specific files
+# OS junk
 .DS_Store
 Thumbs.db
 desktop.ini
 
-# IDE/editor stuff (optional)
+# IDE/editor files
 .vscode/
 .idea/
 *.swp
-*.swo
-*.swn
